Multiple bug fixes (#7243)
* PLT-7320 - Fixing alignment of x icon

* PLT-7357 - Fixing close icon in compact view

* PLT-7322 - Fixing overflow for delete token modal

* PLT-7351 - Fixing flag icon alignment

* PLT-7393 - Fixing cursor on upload button

* PLT-7392 - Fixing scrollbar in admin console

* PLT-7376 - Fixing hover effect for mobile nav

--- a/webapp/sass/responsive/_tablet.scss
+++ b/webapp/sass/responsive/_tablet.scss
@@ -358,7 +358,7 @@
                     padding-top: 0;
 
                     .flag-icon__container {
-                        left: -19px;
+                        left: -21px;
                         position: absolute;
                         top: 4px;
                     }
